# media-organizer

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  DESIGN_SPECS.md  DIAGRAMS.md  PRD.md  QUICKSTART.md  UI_DESIGN.md  WORKFLOW.md
src/: App.css  App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: connection.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: file_scanner.rs  mod.rs  thumbnail_generator.rs
src/api/: tags.ts
src/components/: BatchTagModal.css  BatchTagModal.tsx  CreateTagModal.css  CreateTagModal.tsx  FilterPanel.css  FilterPanel.tsx  MediaCard.css  MediaCard.tsx  MediaGrid.css  MediaGrid.tsx  MediaViewer.css  MediaViewer.tsx  SelectionToolbar.css  SelectionToolbar.tsx  TagContextMenu.css  TagContextMenu.tsx  TagTree.css  TagTree.tsx  TagTreeNodeItem.css  TagTreeNodeItem.tsx  TimelineHeader.css  TimelineHeader.tsx
src/stores/: timelineStore.ts
src/views/: TagView.css  TagView.tsx  TimelineView.css  TimelineView.tsx
